<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/spanish"
        android:orderInCategory="100"
        android:title="@string/language_spanish"
        app:showAsAction="never"/>

    <item
        android:id="@+id/english"
        android:orderInCategory="100"
        android:title="@string/language_english"
        app:showAsAction="never"/>

    <item
        android:id="@+id/french"
        android:orderInCategory="100"
        android:title="@string/language_french"
        app:showAsAction="never"/>

    <item
        android:id="@+id/german"
        android:orderInCategory="100"
        android:title="@string/language_german"
        app:showAsAction="never"/>

    <item
        android:id="@+id/catalan"
        android:orderInCategory="100"
        android:title="@string/language_catalan"
        app:showAsAction="never"/>
</menu>