<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bottom_line">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textStyle="bold"
                android:textSize="15dp"
                ></TextView>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/click_to_insert_new_password"
                android:textStyle="italic"
                android:textSize="10dp"
                ></TextView>
        </LinearLayout>

        <Button
            android:id="@+id/change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/set">
        </Button>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bottom_line">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/change_language"
                android:textStyle="bold"
                android:textSize="15dp"
                ></TextView>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/sets_language"
                android:textStyle="italic"
                android:textSize="10dp"
                ></TextView>
        </LinearLayout>

        <Button
            android:id="@+id/change_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/set">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bottom_line">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/change_postal_code"
                android:textStyle="bold"
                android:textSize="15dp"
                ></TextView>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/establishes_postal_code"
                android:textStyle="italic"
                android:textSize="10dp"
                ></TextView>
        </LinearLayout>

        <Button
            android:id="@+id/change_postalcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/set">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bottom_line">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/user_email_adress"
                android:textStyle="bold"
                android:textSize="15dp"
                ></TextView>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/change_email_adress"
                android:textStyle="italic"
                android:textSize="10dp"
                ></TextView>
        </LinearLayout>

        <Button
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/set">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bottom_line">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/add_email_adress"
                android:textStyle="bold"
                android:textSize="15dp"
                ></TextView>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/new_email_tutor"
                android:textStyle="italic"
                android:textSize="10dp"
                ></TextView>
        </LinearLayout>

        <Button
            android:id="@+id/user_email_tutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/set">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bottom_line">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/delete_account"
                android:textSize="15dp"
                android:textStyle="bold"></TextView>


        </LinearLayout>

        <Button
            android:id="@+id/delete_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/delete">
        </Button>
    </LinearLayout>


    <Button
        android:id="@+id/button_to_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/go_back"
        android:textColor="#fff" />



</LinearLayout>