<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp"
          android:background="@drawable/bottom_line">

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:layout_margin="20dp">

          <TextView
              android:layout_width="200dp"
              android:layout_height="wrap_content"
              android:text="@string/notifications_tone"
              android:textStyle="bold"
              android:textSize="15dp"
              ></TextView>

              <TextView
                  android:layout_width="200dp"
                  android:layout_height="wrap_content"
                  android:text="@string/sound"
                  android:textStyle="italic"
                  android:textSize="10dp"
                  ></TextView>
          </LinearLayout>

          <Switch
              android:id="@+id/notification_tones"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:checked="true">
          </Switch>

      </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bottom_line">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/notification_vibration"
                android:textStyle="bold"
                android:textSize="15dp"
                ></TextView>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/vibration"
                android:textStyle="italic"
                android:textSize="10dp"
                ></TextView>
        </LinearLayout>

        <Button
            android:id="@+id/notification_vibration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/set">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bottom_line">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/notification_light"
                android:textStyle="bold"
                android:textSize="15dp"
                ></TextView>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/light"
                android:textStyle="italic"
                android:textSize="10dp"
                ></TextView>
        </LinearLayout>

        <Button
            android:id="@+id/notification_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/set">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bottom_line">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/notification_priority"
                android:textStyle="bold"
                android:textSize="15dp"
                ></TextView>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/priority"
                android:textStyle="italic"
                android:textSize="10dp"
                ></TextView>
        </LinearLayout>

        <Button
            android:id="@+id/notification_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/set">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bottom_line">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/email_Notification"
                android:textStyle="bold"
                android:textSize="15dp"
                ></TextView>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/email_notification"
                android:textStyle="italic"
                android:textSize="10dp"
                ></TextView>
        </LinearLayout>

        <Switch
            android:id="@+id/notification_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false">
        </Switch>

    </LinearLayout>


    <Button
        android:id="@+id/button_to_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/go_back"
        android:textColor="#fff" />



</LinearLayout>