<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/input_group"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="HealthCare Assistant AideBot"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="84dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/logo" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/new_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bottom"
                android:entries="@array/country_arrays"
                android:padding="15dp" />
            <Button
                android:id="@+id/translate_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/translate"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/new_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_top"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="15dp" />

        <EditText
            android:id="@+id/new_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_middle"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_middle"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp" />


        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/new_signIn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:text="@string/already_account"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="13dp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>